# exchange_backtester

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  constants.rs  exchange.rs  history.rs  input.rs  lags.rs  lib.rs  message.rs  order.rs  trader.rs  types.rs  utils.rs
src/exchange/: interface.rs  trades.rs  types.rs
src/exchange/interface/: history.rs  private.rs  public.rs  trader.rs
src/exchange/trades/: history.rs
src/history/: parser.rs  reader.rs  types.rs
src/history/parser/: interface.rs
src/input/: cli.rs  default.rs  inline.rs
src/lags/: constant.rs  interface.rs
src/trader/: examples.rs  subscriptions.rs
tests/: one_day.rs  two_days.rs
tests/data/integration/test_01/: PRL_01.csv  TRD_02.csv
tests/integration/test_01/: PRL_02.csv  TRD_01.csv
