[package]
name = "exchange_backtester"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
csv = "^1.1.6"
clap = "^3.0.0-beta.4"
derive_more = "^0.99.16"
rand = "^0.8.4"

[[test]]
name = "one_day"
harness = false